--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@ html{
   margin:0;
   background: #3F6F93;
   height: 100%;
+  width: 100%;
 }
 body{
 	margin-top: 0;
@@ -25,11 +26,25 @@ font-size: 20px;
 
 }
 
-.movie{
+.movie, {
 font-size: 15px;
-margin-left: 40px;
+margin: 0 40px;
 }
 
-#Title{
-	font-size: 20px;
+#Title, .title{
+	font-size: 25px;
 }
+
+.fav-poster{
+	width: 80px;
+	margin-left: 20px;
+	margin-right: 10px;
+	float: left;
+	clear: both;
+}
+.fav-movie{
+	display: block;
+	margin-left: 0;
+	overflow: auto;
+}
+
