--- a/views/favoritelist.html
+++ b/views/favoritelist.html
@@ -6,10 +6,17 @@
     <title>Presto's Movie Search</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.0/backbone-min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="/js/favorites.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" /> 
   </head>
   <body>
+  <h1>Favorites</h1>
+      <a href="/">Home</a>
+
+      
+      <ul class="container">
+      <div id="fav-movies-container"></div>
+      </ul>
   
   </body>
 </html>
