--- a/views/index.html
+++ b/views/index.html
@@ -7,12 +7,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.0/backbone-min.js"></script>
     <script src="/js/app.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css" /> 
   </head>
   <body>
   <h1>Presto's Movie Search</h1>
-  <a href="/favoritelist">Favorites</a>
-      <form>
+  <a  href="/favoritelist">Favorites</a>
+      <form class="movie-search">
       <input type="text" placeholder="Movie title" />
       <button type="submit">Search</button>
     </form>
@@ -22,6 +23,7 @@
       <ul class="movie">
       </ul>
     </form>
+
 
     
   
