--- a/public/style.css
+++ b/public/style.css
@@ -53,14 +53,15 @@ font-size: 15px;
 	margin-top: 40px;
 }
 
-a {
+a, button{
 	background:  #3F6F93;
 	padding: 15px;
 	text-decoration: none;
 	color: white;
+	border: 0;
 }
 
-a:hover{
+a:hover, button:hover{
 	background: #345E7C;
 
 }
